# SXEware

./: CMakeLists.txt  README.md
headers/: glad.h
src/: glad.c  main.cpp
